// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_12__m4c9ow1r"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_1_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_4_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_12__m4c9ow1r"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_8_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_b_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_12__m4c9ow1r"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_true__adn1w24 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="true"
                  class="styles__adn1w28"
                  id="_r_n_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_true__adn1w24 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="true"
                  class="styles__adn1w28"
                  id="_r_q_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp"
      >
        Eror content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_12__m4c9ow1r"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_f_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_i_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_15__m4c9ow1u"
      >
        Helper content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__l0r03j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <legend
                class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_12__m4c9ow1r"
              >
                Label
              </legend>
              <span
                class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_4__m4c9ow1j"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_10_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
            >
              <div
                class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <div
                  class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
                  style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
                >
                  <span
                    class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_12__m4c9ow1r"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
              >
                <input
                  aria-invalid="false"
                  class="styles__adn1w28"
                  id="_r_13_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
